# dir-diary

./: .gitignore  LICENSE  README.md  automated_changes.txt  pyproject.toml
.github/workflows/: summarize.yml  test.yml  testpush.yml
dir_diary/: __init__.py  chatbot.py  classifier.py  cli.py  client.py  datastructures.py  file_handler.py  langchain_chatbot.py  mapper.py  openai_chatbot.py  summarize.py  summarizer.py  validators.py
docs/: project_map.json  pseudocode.md  usage.md
pseudocode/: project_map.json  pseudocode.md
pseudocode_summarizer/: __init__.py  chatbot.py  classifier.py  cli.py  datastructures.py  file_handler.py  legacy.py  mapper.py  summarize.py  summarizer.py
tests/: test_chatbot.py  test_classifier.py  test_cli.py  test_client.py  test_datastructures.py  test_file_handler.py  test_mapper.py  test_openai_chatbot.py  test_summarizer.py  test_validators.py
