[tool.poetry]
name = "pseudocode-summarizer"
version = "0.1.0"
description = ""
authors = ["Christopher Carroll Smith <75859865+chriscarrollsmith@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "pseudocode_summarizer"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.272"
python-dotenv = "^1.0.0"
pydantic = "^2.3.0"
pathspec = "^0.11.2"
openai = "^0.28.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
