[tool.poetry]
name = "pseudocode-summarizer"
version = "0.1.2"
description = "A Python CLI tool to generate a pseudocode summary of your project folder with LLMs"
license = "MIT"
authors = ["Christopher Carroll Smith <christopher.smith@promptlytechnologies.com>"]
readme = "README.md"
packages = [{include = "pseudocode_summarizer"}]

[tool.poetry.dependencies]
python = "^3.8"
langchain = "^0.0.272"
python-dotenv = "^1.0.0"
pydantic = "^2.3.0"
pathspec = "^0.11.2"
openai = "^0.28.0"
click = "^8.1.7"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[tool.poetry.scripts]
summarize = "pseudocode_summarizer.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
